syntax = "proto3";

package common;

option go_package = "github.com/fahrillrizal/ecommerce-grpc/pb/common";

message PaginationSortRequest {
    string field = 1;
    string direction = 2; // "asc" or "desc"
}

message PaginationRequest {
    int32 current_page = 1;
    int32 per_page = 2;
    PaginationSortRequest sort = 3;
}

message PaginationResponse {
    int32 current_page = 1;
    int32 total_page_count = 2;
    int32 per_page = 3;
    int32 total_item_count = 4;
}